--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.53.0",
     "@types/crypto-js": "^4.2.2",
     "crypto-js": "^4.2.0",
+    "lucide-react": "^0.535.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
